# micro-admin-videos-python

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.docker/zsh/powerlevel10k/: .p10k.zsh
src/__seedwork/domain/: entities.py  value_objects.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_value_objects.py
src/category/domain/: entities.py
src/category/tests/unit/domain/: test_unit_entities.py
